--- a/lib/device-info/devices.yaml
+++ b/lib/device-info/devices.yaml
@@ -7,7 +7,7 @@
     :width: 480
     :height: 196
 :ipad:
-  :user_agent: "Mozilla/5.0(iPad; U; CPU iPhone OS 3_2 like Mac OS X; en-us) AppleWebKit/531.21.10 (KHTML, like Gecko) Version/4.0.4 Mobile/7B314 Safari/531.21.10"
+  :user_agent: "Mozilla/5.0(iPad; U; CPU OS 5_0 like Mac OS X; en-us) AppleWebKit/534.46 (KHTML, like Gecko) Version/5.1 Mobile/9A334 Safari/7534.48.3"
   :portrait:
     :width: 768
     :height: 946
