--- a/lib/device-info/devices.yaml
+++ b/lib/device-info/devices.yaml
@@ -6,6 +6,14 @@
   :landscape:
     :width: 480
     :height: 196
+:ipad_seven:
+  :user_agent: "Mozilla/5.0 (iPad; CPU OS 6_1_3 like Mac OS X) AppleWebKit/536.26 (KHTML, like Gecko) Version/6.0 Mobile/10B329 Safari/8536.25"
+  :portrait:
+    :width: 768
+    :height: 946
+  :landscape:
+    :width: 1024
+    :height: 690
 :ipad:
   :user_agent: "Mozilla/5.0(iPad; U; CPU OS 5_0 like Mac OS X; en-us) AppleWebKit/534.46 (KHTML, like Gecko) Version/5.1 Mobile/9A334 Safari/7534.48.3"
   :portrait:
