--- a/lib/device-info/devices.yaml
+++ b/lib/device-info/devices.yaml
@@ -1,4 +1,16 @@
-:iphone:
+# Desktop size sources
+# http://www.hobo-web.co.uk/best-screen-size/
+# https://en.wikipedia.org/wiki/Display_resolution#Common_display_resolutions
+# http://www.w3schools.com/browsers/browsers_display.asp
+:desktop:
+   :user_agent: "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_5) AppleWebKit/600.8.9 (KHTML, like Gecko) Version/8.0.8 Safari/600.8.9"
+   :portrait:
+     :width: 768
+     :height: 1024
+   :landscape:
+     :width: 1366
+     :height: 768
+:iphone_default: &iphone_default
    :user_agent: "Mozilla/5.0 (iPhone; CPU iPhone OS 8_1_1 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) Version/8.0 Mobile/12B435 Safari/600.1.4"
    :portrait:
      :width: 375
@@ -6,8 +18,20 @@
    :landscape:
      :width: 667
      :height: 375
+:iphone:
+   <<: *iphone_default
+:iphone6splus:
+  <<: *iphone_default
+  :portrait:
+    :width: 414
+    :height: 628
+  :landscape:
+    :width: 736
+    :height: 414
+:iphone6s:
+  <<: *iphone_default
 :iphone6plus:
-  :user_agent: "Mozilla/5.0 (iPhone; CPU iPhone OS 8_1_1 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) Version/8.0 Mobile/12B435 Safari/600.1.4"
+  <<: *iphone_default
   :portrait:
     :width: 414
     :height: 628
@@ -15,15 +39,9 @@
     :width: 736
     :height: 414
 :iphone6:
-  :user_agent: "Mozilla/5.0 (iPhone; CPU iPhone OS 8_1_1 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) Version/8.0 Mobile/12B435 Safari/600.1.4"
-  :portrait:
-    :width: 375
-    :height: 559
-  :landscape:
-    :width: 667
-    :height: 375
+  <<: *iphone_default
 :iphone5s:
-  :user_agent: "Mozilla/5.0 (iPhone; CPU iPhone OS 8_1_1 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) Version/8.0 Mobile/12B435 Safari/600.1.4"
+  <<: *iphone_default
   :portrait:
     :width: 320
     :height: 460
@@ -31,7 +49,7 @@
     :width: 568
     :height: 212
 :iphone4s:
-  :user_agent: "Mozilla/5.0 (iPhone; CPU iPhone OS 8_1_1 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) Version/8.0 Mobile/12B435 Safari/600.1.4"
+  <<: *iphone_default
   :portrait:
     :width: 320
     :height: 356
@@ -39,13 +57,21 @@
     :width: 480
     :height: 196
 :ipad:
-  :user_agent: "Mozilla/5.0(iPad; U; CPU OS 8_1_1 like Mac OS X) AppleWebKit/600.14 (KHTML, like Gecko) Version/8.0 Mobile/12B435 Safari/9537.53"
+  :user_agent: "Mozilla/5.0(iPad; U; CPU OS 8_1_1 like Mac OS X) AppleWebKit/600.14 (KHTML, like Gecko) Version/8.0 Mobile/12B435 Safari/600.1.4"
   :portrait:
     :width: 768
     :height: 960
   :landscape:
     :width: 1024
     :height: 704
+:ipad_pro:
+  :user_agent: "Mozilla/5.0 (iPad; CPU OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B137 Safari/601.1"
+  :portrait:
+    :width: 1024
+    :height: 1302
+  :landscape:
+    :width: 1366
+    :height: 960
 :android_phone:
   :user_agent: "Mozilla/5.0 (Linux; U; Android 4.0.1; en-us; sdk Build/ICS_MR0) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30"
   :portrait:
