--- a/lib/device-info/devices.yaml
+++ b/lib/device-info/devices.yaml
@@ -22,7 +22,7 @@
      :width: 1366
      :height: 768
 :iphone_default: &iphone_default
-   :user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_1_4 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Mobile/15E148 Safari/604.1"
+   :user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_1_4 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Mobile/15E148 Safari/604.1
    :portrait:
      :width: 414
      :height: 719
