--- a/lib/device-info/devices.yaml
+++ b/lib/device-info/devices.yaml
@@ -3,18 +3,18 @@
 # - https://en.wikipedia.org/wiki/Display_resolution#Common_display_resolutions
 # - http://www.w3schools.com/browsers/browsers_display.asp
 
-# iPhone sizes added by running Simulator on macOS and visiting
-# https://viewportsizes.com/mine/
-# Note: It is correct that the iPhone XS Max
-# and the iPhone XR do have the same viewport size.
+# iPhone and iPad data added by running Simulator on macOS and visiting
+# https://whatismyviewport.com and
+# https://www.whatismybrowser.com/detect/what-is-my-user-agent
 
 # Android user agents and viewports from current android device specs.
-# Phone: Samsung Galaxy S9; Tablet: Google Pixel C
+# Tablet: Samsung Galaxy Tab S6; Phone: Google Pixel 4
 # Determined without a simulator to account for software chrome,
 # so these figures are necessarily larger than what will be true
-# on those devices.
+# on those devices. Please feel free to submit a pull request
+# with corrected and/or expanded device values.
 :desktop:
-   :user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_3) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.3 Safari/605.1.15
+   :user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1 Safari/605.1.15
    :portrait:
      :width: 768
      :height: 1024
@@ -22,7 +22,7 @@
      :width: 1366
      :height: 768
 :iphone_default: &iphone_default
-   :user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_1_4 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Mobile/15E148 Safari/604.1
+   :user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/604.1
    :portrait:
      :width: 414
      :height: 719
@@ -30,11 +30,31 @@
      :width: 808
      :height: 414
 :iphone: &iphone
-   <<: *iphone_default
-:iphonexr:
+  <<: *iphone_default
+:iphone11pro:
+  <<: *iphone_default
+  :portrait:
+    :width: 375
+    :height: 635
+  :landscape:
+    :width: 724
+    :height: 375
+:iphone11promax:
+  <<: *iphone_default
+:iphone11:
+  <<: *iphone_default
+:iphonese: &iphonese
+  <<: *iphone_default
+  :portrait:
+    :width: 375
+    :height: 553
+  :landscape:
+    :width: 667
+    :height: 375
+:iphonexr: &iphonexr
   <<: *iphone_default
 :iphonexsmax:
-  <<: *iphone_default
+  <<: *iphonexr
 :iphonexs: &iphonexs
   <<: *iphone_default
   :portrait:
@@ -54,18 +74,11 @@
     :width: 736
     :height: 414
 :iphone8: &iphone8
-  <<: *iphone_default
-  :portrait:
-    :width: 375
-    :height: 553
-  :landscape:
-    :width: 667
-    :height: 375
+  <<: *iphonese
 :iphone7plus:
   <<: *iphone8plus
 :iphone7:
   <<: *iphone8
-  :portrait:
 :iphone6splus:
   <<: *iphone8plus
 :iphone6s:
@@ -82,7 +95,7 @@
   :landscape:
     :width: 568
     :height: 320
-:iphonese:
+:iphonese_old:
   <<: *iphone5s
 :iphone5:
   <<: *iphone5s
@@ -97,13 +110,13 @@
 :iphone4:
   <<: *iphone4s
 :ipad: &ipad
-  :user_agent: Mozilla/5.0 (iPad; CPU OS 12_1_4 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Mobile/15E148 Safari/604.1
+  :user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Safari/605.1.15
   :portrait:
-    :width: 768
-    :height: 954
+    :width: 810
+    :height: 1010
   :landscape:
-    :width: 1024
-    :height: 698
+    :width: 1080
+    :height: 740
 :ipad_default:
   <<: *ipad
 :ipad_pro: &ipad_pro
@@ -124,14 +137,6 @@
   :landscape:
     :width: 1194
     :height: 760
-:ipad_pro_10:
-  <<: *ipad
-  :portrait:
-    :width: 834
-    :height: 1042
-  :landscape:
-    :width: 1112
-    :height: 764
 :ipad_pro_9:
   <<: *ipad
   :portrait:
@@ -140,19 +145,29 @@
   :landscape:
     :width: 1024
     :height: 698
-:android_phone:
-  :user_agent: Mozilla/5.0 (Linux; Android 8.0.0; SM-G960F Build/R16NW) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.84 Mobile Safari/537.36
+:ipad_air: &ipad_air
+  <<: *ipad
   :portrait:
-    :width: 412
-    :height: 846
+    :width: 834
+    :height: 1038
   :landscape:
-    :width: 846
-    :height: 412
-:android_tablet:
-  :user_agent: Mozilla/5.0 (Linux; Android 7.0; Pixel C Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/52.0.2743.98 Safari/537.36
+    :width: 1112
+    :height: 760
+:ipad_pro_10:
+  <<: *ipad_air
+:android_phone:
+  :user_agent: Mozilla/5.0 (Linux; Android 10; Pixel) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.87 Mobile Safari/537.36
   :portrait:
-    :width: 900
+    :width: 411
+    :height: 869
+  :landscape:
+    :width: 869
+    :height: 411
+:android_tablet:
+  :user_agent: Mozilla/5.0 (Linux; Android 9; SAMSUNG SM-T865) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/10.1 Chrome/71.0.3578.99 Safari/537.36
+  :portrait:
+    :width: 800
     :height: 1280
   :landscape:
     :width: 1280
-    :height: 900
+    :height: 800
